--- a/ts-cli-plugin/tsconfig.json
+++ b/ts-cli-plugin/tsconfig.json
@@ -1,4 +1,14 @@
 {
   "extends": "./tsconfig.build.json",
-  "include": ["src", "test"]
+  "compilerOptions": {
+    "noEmit": true,
+    "allowJs": true
+  },
+  "include": [
+    "src",
+    "test",
+    "eslint.config.mts",
+    "examples"
+  ],
+  "exclude": ["node_modules", "dist/**/*"]
 }
