--- a/ts-cli-plugin/package.json
+++ b/ts-cli-plugin/package.json
@@ -1,20 +1,43 @@
 {
   "name": "ts-cli-plugin",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/ts-cli-plugin.d.ts",
+  "bin": {
+    "ts-cli-plugin": "bin/ts-cli-plugin"
+  },
   "scripts": {
-    "clean": "rimraf dist",
-    "build": "tsc -P tsconfig.build.json",
-    "test": "vitest run"
+    "clean": "rimraf dist docs",
+    "copy-assets": "cp -R src/protos dist/protos 2>/dev/null || true",
+    "build": "pnpm compile:ts && pnpm api:extract && pnpm compile:docs",
+    "compile:ts": "tsc -P tsconfig.build.json && pnpm run copy-assets",
+    "rebuild": "pnpm clean && pnpm build && pnpm build",
+    "prepare": "pnpm build",
+    "lint": "eslint .",
+    "test": "vitest run",
+    "api:extract": "api-extractor run --local",
+    "compile:docs": "api-documenter markdown --input ./temp --output ./docs"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "packageManager": "pnpm@10.15.0",
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
+    "@microsoft/api-documenter": "^7.26.32",
+    "@microsoft/api-extractor": "^7.52.11",
+    "@types/node": "^24.3.0",
+    "eslint": "^9.34.0",
+    "jiti": "^2.5.1",
     "rimraf": "^6.0.1",
-    "typescript": "^5.9.2",
+    "typescript": "5.8.2",
+    "typescript-eslint": "^8.42.0",
     "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "@grpc/grpc-js": "^1.13.4",
+    "@grpc/proto-loader": "^0.8.0",
+    "google-proto-files": "5.0.1"
   }
 }
