--- a/ts-cli-plugin/tsconfig.build.json
+++ b/ts-cli-plugin/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2024",
     "module": "CommonJS",
     "outDir": "./dist",
     "declaration": true,
@@ -8,8 +8,9 @@
     "sourceMap": true,
     "strict": true,
     "skipLibCheck": false,
+    "allowJs": false,
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "test"]
+  "exclude": ["node_modules", "dist/**/*"]
 }
