--- a/examples/kv/package.json
+++ b/examples/kv/package.json
@@ -1,10 +1,18 @@
 {
   "name": "@examples/kv",
   "version": "0.0.1",
-  "private": true,
-  "type": "commonjs",
-  "main": "dist/plugin.js",
-  "types": "dist/plugin.d.ts",
+  "dependencies": {
+    "@grpc/grpc-js": "^1.13.4",
+    "@grpc/proto-loader": "^0.8.0",
+    "package-up": "^5.0.0",
+    "ts-cli-plugin": "workspace:*"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.1",
+    "rimraf": "^6.0.1",
+    "typescript": "5.8.2",
+    "vitest": "^3.2.4"
+  },
   "exports": {
     ".": {
       "import": "./dist/plugin.js",
@@ -15,22 +23,15 @@
       "require": "./dist/register.js"
     }
   },
+  "main": "dist/plugin.js",
+  "private": true,
   "scripts": {
     "build": "tsc -P tsconfig.json",
-    "lint": "eslint .",
     "clean": "rimraf dist",
-    "test": "vitest run"
+    "lint": "eslint .",
+    "test": "vitest run",
+    "typecheck": "tsc --noEmit"
   },
-  "devDependencies": {
-    "@types/node": "^24.3.1",
-    "rimraf": "^6.0.1",
-    "typescript": "5.8.2",
-    "vitest": "^3.2.4"
-  },
-  "dependencies": {
-    "@grpc/grpc-js": "^1.13.4",
-    "@grpc/proto-loader": "^0.8.0",
-    "package-up": "^5.0.0",
-    "ts-cli-plugin": "workspace:*"
-  }
+  "type": "commonjs",
+  "types": "dist/plugin.d.ts"
 }
