prettier check, knip check and syncpack check in CI

--- a/examples/kv/package.json
+++ b/examples/kv/package.json
@@ -28,7 +28,8 @@
   "scripts": {
     "build": "tsc -P tsconfig.json",
     "clean": "rimraf dist",
-    "lint": "eslint .",
+    "lint:eslint": "eslint .",
+    "fix:eslint": "eslint . --fix",
     "test": "vitest run",
     "typecheck": "tsc --noEmit"
   },
