--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --ignore-scripts
 
-      - name: Lint
-        run: pnpm run lint
-
       - name: Build
-        run: pnpm run build
+        run: pnpm build
+
+      - name: Lint
+        run: pnpm lint
 
       - name: Test
-        run: pnpm run test
+        run: pnpm test
