--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
     "build": "lerna run build",
     "clean": "lerna run clean",
     "cleanbuild": "lerna run clean && lerna run build",
-    "fix": "lerna run fix && pnpm syncpack:fix",
-    "format": "pnpm format:prettier && pnpm format:knip && pnpm format:syncpack",
-    "format:knip": "knip --format",
-    "format:prettier": "prettier --write .",
-    "format:syncpack": "syncpack format",
-    "knip": "knip",
-    "knip:fix": "knip --fix",
-    "lint": "lerna run lint,typecheck",
-    "syncpack:fix": "syncpack fix",
-    "syncpack:lint": "syncpack lint",
+    "lint": "pnpm lint:all",
+    "lint:all": "pnpm lint:eslint-and-typecheck && pnpm lint:knip && pnpm lint:syncpack",
+    "lint:knip": "knip",
+    "lint:eslint": "lerna run lint:eslint",
+    "lint:typecheck": "lerna run typecheck",
+    "lint:eslint-and-typecheck": "lerna run lint:eslint,typecheck",
+    "lint:syncpack": "syncpack lint",
+    "fix": "pnpm fix:all",
+    "fix:all": "pnpm fix:packages && pnpm fix:knip && pnpm fix:syncpack",
+    "fix:format": "pnpm fix:format:prettier && pnpm fix:format:syncpack",
+    "fix:format:prettier": "prettier --write .",
+    "fix:format:syncpack": "syncpack format",
+    "fix:knip": "knip --fix --format",
+    "fix:packages": "lerna run fix",
+    "fix:syncpack": "syncpack fix",
     "test": "lerna run test"
   },
   "volta": {
