--- a/ts-cli-plugin/package.json
+++ b/ts-cli-plugin/package.json
@@ -31,15 +31,16 @@
     "api:extract:deps": "api-extractor run --local --config ./scripts/api-extractor/grpc-js.json && node ./scripts/rename-grpc-json.js && mkdir -p temp/combined && cp -f temp/ts-cli-plugin.api.json temp/combined/ && cp -f temp/@grpc/grpc-js.api.json temp/combined/",
     "build": "pnpm compile:ts && pnpm api:extract && pnpm api:extract:deps && pnpm compile:docs",
     "clean": "rimraf dist docs temp/combined temp/@grpc/grpc-js.api.json",
-    "compile:docs": "api-documenter markdown --input ./temp/combined --output ./docs && pnpm format",
+    "compile:docs": "api-documenter markdown --input ./temp/combined --output ./docs && pnpm fix:format",
     "compile:ts": "tsc -P tsconfig.build.json && pnpm run copy-assets",
-    "copy-assets": "cp -R src/protos dist/protos 2>/dev/null || true && pnpm format",
-    "format": "prettier --write .",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "copy-assets": "cp -R src/protos dist/protos 2>/dev/null || true && pnpm fix:format",
+    "lint:eslint": "eslint .",
+    "lint:format": "prettier --check .",
+    "fix:eslint": "eslint . --fix",
     "prepare": "pnpm build",
     "rebuild": "pnpm clean && pnpm build && pnpm build",
     "test": "vitest run",
+    "fix:format": "prettier --write .",
     "typecheck": "tsc --noEmit"
   },
   "types": "dist/ts-cli-plugin.d.ts"
