--- a/package.json
+++ b/package.json
@@ -19,13 +19,6 @@
     "build": "lerna run build",
     "clean": "lerna run clean",
     "cleanbuild": "lerna run clean && lerna run build",
-    "lint": "pnpm lint:all",
-    "lint:all": "pnpm lint:eslint-and-typecheck && pnpm lint:knip && pnpm lint:syncpack",
-    "lint:knip": "knip",
-    "lint:eslint": "lerna run lint:eslint",
-    "lint:typecheck": "lerna run typecheck",
-    "lint:eslint-and-typecheck": "lerna run lint:eslint,typecheck",
-    "lint:syncpack": "syncpack lint",
     "fix": "pnpm fix:all",
     "fix:all": "pnpm fix:packages && pnpm fix:knip && pnpm fix:syncpack",
     "fix:format": "pnpm fix:format:prettier && pnpm fix:format:syncpack",
@@ -34,6 +27,11 @@
     "fix:knip": "knip --fix --format",
     "fix:packages": "lerna run fix",
     "fix:syncpack": "syncpack fix",
+    "lint": "pnpm lint:all",
+    "lint:all": "pnpm lint:packages && pnpm lint:knip && pnpm lint:syncpack",
+    "lint:knip": "knip",
+    "lint:packages": "lerna run lint:all",
+    "lint:syncpack": "syncpack lint",
     "test": "lerna run test"
   },
   "workspaces": [
