--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@eslint/js": "^9.34.0",
     "@types/node": "^24.3.1",
     "eslint": "^9.34.0",
+    "husky": "^9.1.7",
     "jiti": "^2.5.1",
     "knip": "^5.63.1",
     "lerna": "^8.2.3",
@@ -32,7 +33,8 @@
     "lint:knip": "knip",
     "lint:packages": "lerna run lint:all",
     "lint:syncpack": "syncpack lint",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "prepare": "husky"
   },
   "workspaces": [
     "ts-cli-plugin",
