--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,3 +47,23 @@ jobs:
 
       - name: Test
         run: pnpm test
+
+      - name: Check docs are up-to-date
+        run: |
+          # The build step above already regenerated docs, so check if git detects any changes
+          if ! git diff --quiet --exit-code ts-cli-plugin/docs/; then
+            echo "❌ Documentation is out of date!"
+            echo ""
+            echo "The committed docs differ from what should be generated."
+            echo "The following files have changed after regeneration:"
+            git diff --name-only ts-cli-plugin/docs/
+            echo ""
+            echo "Please run the following commands and commit the changes:"
+            echo "  pnpm --filter ts-cli-plugin build"
+            echo ""
+            echo "Differences:"
+            git diff ts-cli-plugin/docs/
+            exit 1
+          else
+            echo "✅ Documentation is up-to-date"
+          fi
