--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "typescript": "5.8.2",
     "typescript-eslint": "^8.42.0"
   },
+  "optionalDependencies": {
+    "syncpack": "14.0.0-alpha.19"
+  },
   "packageManager": "pnpm@10.15.0",
   "private": true,
   "scripts": {
