--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2024",
+    "target": "esnext",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
     "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": false,
     "forceConsistentCasingInFileNames": true
   },
