--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -14,14 +14,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: pnpm
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10.15.0
-      - run: pnpm install --frozen-lockfile
-      - name: Lint PR commits
+      - name: Lint PR commits (npx)
         run: |
           BASE_SHA=$(jq -r .pull_request.base.sha "$GITHUB_EVENT_PATH")
           HEAD_SHA=$(jq -r .pull_request.head.sha "$GITHUB_EVENT_PATH")
-          pnpm commitlint --from $BASE_SHA --to $HEAD_SHA --verbose
+          npx --yes @commitlint/cli@19.5.0 --from $BASE_SHA --to $HEAD_SHA --verbose -x @commitlint/config-conventional@19.5.0
 
