--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -18,5 +18,6 @@ jobs:
         run: |
           BASE_SHA=$(jq -r .pull_request.base.sha "$GITHUB_EVENT_PATH")
           HEAD_SHA=$(jq -r .pull_request.head.sha "$GITHUB_EVENT_PATH")
-          npx --yes @commitlint/cli@19.5.0 --from $BASE_SHA --to $HEAD_SHA --verbose -x @commitlint/config-conventional@19.5.0
+          npx --yes -p @commitlint/cli@19.5.0 -p @commitlint/config-conventional@19.5.0 \
+            commitlint --from "$BASE_SHA" --to "$HEAD_SHA" --verbose -x @commitlint/config-conventional
 
