--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -11,13 +11,18 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10.15.0
       - uses: actions/setup-node@v4
         with:
           node-version: 22
-      - name: Lint PR commits (npx)
+          cache: pnpm
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+      - name: Lint PR commits
         run: |
           BASE_SHA=$(jq -r .pull_request.base.sha "$GITHUB_EVENT_PATH")
           HEAD_SHA=$(jq -r .pull_request.head.sha "$GITHUB_EVENT_PATH")
-          npx --yes -p @commitlint/cli@19.5.0 -p @commitlint/config-conventional@19.5.0 \
-            commitlint --from "$BASE_SHA" --to "$HEAD_SHA" --verbose -x @commitlint/config-conventional
+          pnpm exec commitlint --from "$BASE_SHA" --to "$HEAD_SHA" --verbose
 
