Changesets and Commitllint (#1)
* commitlint is running

* chore: rename env variables in GHA

* chore: update lockfile

* chore: remove commitlint CI action reliance on pnpm

* chore: more fixes to commitlint GHA

* chore: install commitlint CLI as a devdep

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "ts-cli-grpc-plugin-workspace",
   "version": "0.0.1",
+  "type": "module",
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.34.0",
     "@types/node": "^24.3.1",
     "eslint": "^9.34.0",
@@ -34,7 +37,8 @@
     "lint:packages": "lerna run lint:all",
     "lint:syncpack": "syncpack lint",
     "test": "lerna run test",
-    "prepare": "husky"
+    "prepare": "husky",
+    "commitlint": "commitlint --from=HEAD~1 --to=HEAD --verbose"
   },
   "workspaces": [
     "ts-cli-grpc-plugin",
